--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "client",
+  "version": "1.0.0",
+  "description": "A React-based platform that connects donors with local charities supporting African schoolgirls.",
+  "main": "eslint.config.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "vite",
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moses-25/Tuinue-wasichana-2.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/moses-25/Tuinue-wasichana-2/issues"
+  },
+  "homepage": "https://github.com/moses-25/Tuinue-wasichana-2#readme",
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
@@ -18,14 +32,7 @@
     "redux": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^7.0.5"
   }
 }
