--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "client",
   "version": "1.0.0",
   "description": "A React-based platform that connects donors with local charities supporting African schoolgirls.",
-  "main": "eslint.config.js",
+  "main": "src/index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "vite",
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -36,3 +36,4 @@
     "vite": "^7.0.5"
   }
 }
+
